--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
   },
