--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ant-app-starter",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "start:pro": "ENVIRONMENT=production expo start",
@@ -25,50 +24,50 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.14.0",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.8.6",
     "apisauce": "^2.1.6",
-    "expo": "^47.0.0",
-    "expo-asset": "~8.7.0",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-linking": "~3.3.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "expo-web-browser": "~12.0.0",
+    "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
+    "expo-constants": "~14.2.1",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-web-browser": "~12.1.1",
     "i18n-js": "^4.1.1",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "ramda": "^0.28.0",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-datepicker": "^4.8.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@types/ramda": "^0.28.18",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-native": "~0.70.6",
     "@types/redux-logger": "^3.0.9",
-    "jest": "^26.6.3",
-    "jest-expo": "^47.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.0",
     "react-test-renderer": "18.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
